--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</div>
 		<div class="section about-section" id="about">
 			<div class="myimg aboutsect" align="center">
-				<img src="C:\Users\91771\Downloads\WhatsApp Image 2022-02-07 at 2.19.57 PM.jpeg" width="350px" style="margin-top:50px ;border-radius: 50%;box-shadow: 0.5px 0.5px 30px cyan;" height="380px">
+				<img src="photo.jpeg" width="350px" style="margin-top:50px ;border-radius: 50%;box-shadow: 0.5px 0.5px 30px cyan;" height="380px">
 			</div>
 			<div class="cobj aboutsect">
 				<h1 align="center" class="logo">ABOUT</h1>
