--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
     </center>
     <div class="card-body">
       <h5 class="card-title">WEATHER APPs</h5>
-      <a href="https://prathmesh9571.github.io/weather_app2/">Link:-https://prathmesh9571.github.io/weather_app2/</a>
+      <a href="https://prathmesh9571.github.io/weather_app2/"> <input class="a" type="button" name="button" style=" width: 100px;" value="More info">
+       </a>
       <p class="card-text">Weather forecasting is the application of science and technology to predict the conditions of the atmosphere for a given location and time. People have attempted to predict the weather informally for millennia and formally since the 19th century.Weather forecasts are made by collecting quantitative data about the current state of the atmosphere, land, and ocean and using meteorology to project how the atmosphere will change at a given place.</p>
      
     </div>
