--- a/index.html
+++ b/index.html
@@ -125,17 +125,19 @@
       <h5 class="card-title">WEATHER APPs</h5>
       <a href="https://prathmesh9571.github.io/weather_app2/"> <input class="a" type="button" name="button" style=" width: 100px;" value="More info">
        </a>
-      <p class="card-text">Weather forecasting is the application of science and technology to predict the conditions of the atmosphere for a given location and time. People have attempted to predict the weather informally for millennia and formally since the 19th century.Weather forecasts are made by collecting quantitative data about the current state of the atmosphere, land, and ocean and using meteorology to project how the atmosphere will change at a given place.</p>
+      <p class="card-text">Weather forecasting is the application of science and technology to predict the conditions of the atmosphere for a given location and time.Weather forecasts are made by collecting quantitative data about the current state of the atmosphere, land, and ocean and using meteorology to project how the atmosphere will change at a given place.</p>
      
     </div>
   </div>
   <div class="card" data-aos="slide-left">
    <center>
-   	 <img src="https://icons.iconarchive.com/icons/papirus-team/papirus-apps/512/multimedia-audio-player-icon.png" class="card-img-top" alt="...">
+   	 <img src="https://phoneky.co.uk/thumbs/screensavers/down/misc/digitalclo_l2kiijom.gif" class="card-img-top" alt="...">
    </center>
     <div class="card-body">
-      <h5 class="card-title">MUSIC PLAYER</h5>
-      <p class="card-text">Media software that are specifically designed to play audio files are also known as music players. These tools support a wide range of music formats, including MP3, WAV, and WMA. Such applications help you to organize your song library with ease.</p>
+      <h5 class="card-title">Digital-Clock</h5>
+       <a href="https://prathmesh9571.github.io/clock/"> <input class="a" type="button" name="button" style=" width: 100px;" value="More info">
+       </a>
+      <p class="card-text">A digital clock displays the time digitally (i.e. in numerals or other symbols), as opposed to an analogue clock. Digital clocks are often associated with electronic drives, but the "digital" description refers only to the display, not to the drive mechanism.</p>
       
     </div>
   </div>
